# yft-bot

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
src/: bot.py  credentials.py  periodic.py  responsive.py  run_periodic.py  run_responsive.py  yf_track.py
src/yft_bot/: bot.py  debug.py  main.py  yf_track.py
