[project]
name = "yft-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyter>=1.1.1",
    "pydantic~=2.10",
    "python-dotenv>=1.1.0",
    "python-telegram-bot~=22.0",
    "wat-inspector>=0.4.3",
    "yfinance~=0.2.56",
]
